src/objects/Related_Reseller_Info__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Related Resellers Info</relationshipLabel>
        <relationshipName>Related_Resellers_Info</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reseller_Contact_Email__c</fullName>
        <label>Reseller Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reseller_Contact_Name__c</fullName>
        <label>Reseller Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reseller_Contact_Phone__c</fullName>
        <label>Reseller Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reseller_Contribution__c</fullName>
        <inlineHelpText>Enter the actual amount contributed by the reseller for this activity</inlineHelpText>
        <label>Reseller Contribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reseller_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reseller Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Resellers Info</relationshipLabel>
        <relationshipName>Related_Resellers_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reseller_Needs_to_Pay_Nimble__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this checkbox to indicate if the reseller needs to pay Nimble for this activity</inlineHelpText>
        <label>Reseller Needs to Pay Nimble</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reseller_Payment_Due_Date__c</fullName>
        <inlineHelpText>Reseller is expected to pay Nimble any amount owed for the joint activity by this date</inlineHelpText>
        <label>Reseller Payment Due Date</label>
        <type>Date</type>
    </fields>
    <label>Related Reseller Info</label>
    <nameField>
        <displayFormat>RVAR-{000000}</displayFormat>
        <label>Related Reseller Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Resellers Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>